deployments/kubernetes/services/stats-writer/stats-writer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-writer
  namespace: payment-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-writer
  template:
    metadata:
      labels:
        app: stats-writer
    spec:
      serviceAccountName: app
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: stats-writer
          image: ghcr.io/__GHCR_OWNER__/microservice-payment-gateway-grpc/stats-writer:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
